--- a/style.css
+++ b/style.css
@@ -1051,7 +1051,7 @@ section {
 }
 
 .footer {
-  background:url(../image/Group\ 146.png) no-repeat;;
+  background:url(image/Group\ 146.png) no-repeat;;
 }
 
 .footer .box-container {
